--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,17 +1,32 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Contact
+      Measured Countertops
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content>
-  <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
-    </ion-item>
+<ion-content padding>
+  
+  <ion-list inset>
+    <ion-item-sliding *ngFor="let countertop of getCountertops()">
+      <ion-item>
+        <h2>{{countertop.unit_number}}</h2>
+      </ion-item>
+      <ion-item-options side="right">
+        <button (click)="editCountertop(countertop, i)" ion-button color="primary" icon-start>
+          <ion-icon name="create"></ion-icon>
+          Edit
+        </button>
+        <button (click)="removeItem(item, i)" ion-button color="danger" icon-start>
+          <ion-icon name="trash"></ion-icon>
+          Remove
+        </button>
+      </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
+
+  <ion-fab bottom right>
+    <button (click)="addCountertop()" ion-fab mini><ion-icon name="add"></ion-icon></button>
+  </ion-fab>
 </ion-content>
